--- a/canvasbot-backend/requirements.txt
+++ b/canvasbot-backend/requirements.txt
@@ -2,9 +2,12 @@ annotated-types==0.7.0
 anyio==4.10.0
 beautifulsoup4==4.13.5
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.2.1
+cryptography==46.0.3
 dnspython==2.8.0
+ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.116.1
 fastapi-cli==0.0.10
@@ -19,18 +22,24 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mysql-connector-python==9.4.0
+numpy==2.3.3
+pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
 python-dotenv==1.1.1
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 requests==2.32.5
 rich==14.1.0
 rich-toolkit==0.15.1
 rignore==0.6.4
+rsa==4.9.1
 sentry-sdk==2.37.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
 SQLAlchemy==2.0.43
