--- a/canvasbot-backend/requirements.txt
+++ b/canvasbot-backend/requirements.txt
@@ -23,6 +23,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 mysql-connector-python==9.4.0
 numpy==2.3.3
+psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.11.7
